--- a/src/WebApp/appsettings.Development.json
+++ b/src/WebApp/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Database": "Host=db;Port=5432;Username=postgres;Password=postgres;Database=yourDatabase",
+    "Database": "Host=db;Port=5432;Username=postgres;Password=postgres;Database=sampleDatabase",
     "Cache": "cache:6379"
   },
   "Logging": {
