--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,23 @@
 services:
+  webfrontend:
+   image: nginx:alpine  # Use the lightweight Alpine NGINX image
+   container_name: nginx-proxy
+   ports: 
+      - "8080:8080"
+      - "8081:8081"
+   depends_on:
+      - webapp
+   volumes:
+      - ./src/client/nginx.conf:/etc/nginx/conf.d/default.conf
+
   webapp:
     image: ${DOCKER_REGISTRY-}webapp
     build:
       context: .
       dockerfile: src/WebApp/Dockerfile
     ports:
-    - "8080:8080"
-    - "8081:8081"
+     - "8080:8080"
+     - "8081:8081"
 
   db:
     image: postgres:15
@@ -14,7 +25,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: yourDatabase
+      POSTGRES_DB: sampleDatabase
     ports:
       - "5432:5432"  
     volumes:
