--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: sampleDatabase
+      POSTGRES_DB: botDatabase
     ports:
       - "5432:5432"  
     volumes:
