--- a/src/client/bot-app/package.json
+++ b/src/client/bot-app/package.json
@@ -16,8 +16,11 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "axios": "^1.7.8",
+    "date-fns": "^4.1.0",
+    "dotenv-webpack": "^8.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-placeholder": "^4.1.0",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
@@ -25,10 +28,12 @@
     "zod": "^3.23.8"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cross-env NODE_ENV=development react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:dev": "NODE_ENV=development webpack --config webpack.config.ts",
+    "build:prod": "NODE_ENV=production webpack --config webpack.config.ts"
   },
   "eslintConfig": {
     "extends": [
@@ -47,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
