--- a/src/client/bot-app/package.json
+++ b/src/client/bot-app/package.json
@@ -20,6 +20,7 @@
     "dotenv-webpack": "^8.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.0",
     "react-placeholder": "^4.1.0",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
