--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
       - ./src/client/nginx.conf:/etc/nginx/conf.d/default.conf
 
   webapp:
-    #Always build locally rather than pulling from registory
-    #image: ${DOCKER_REGISTRY-}webapp
+    #Comment image if you want to build locally rather than pulling from registory
+    image: ${DOCKER_REGISTRY-}webapp
     build:
       context: .
       dockerfile: src/WebApp/Dockerfile
