--- a/src/client/bot-app/package.json
+++ b/src/client/bot-app/package.json
@@ -20,6 +20,9 @@
     "axios": "^1.7.8",
     "date-fns": "^4.1.0",
     "dotenv-webpack": "^8.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "prettify": "^0.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.0",
@@ -31,9 +34,11 @@
     "zod": "^3.23.8"
   },
   "scripts": {
+    "prepare": "husky install",
     "start": "cross-env NODE_ENV=development react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,json}\"",
     "eject": "react-scripts eject",
     "build:dev": "NODE_ENV=development webpack --config webpack.config.ts",
     "build:prod": "NODE_ENV=production webpack --config webpack.config.ts"
@@ -44,6 +49,9 @@
       "react-app/jest"
     ]
   },
+  "lint-staged": {
+  "*.{ts,tsx,js,jsx,json,css,md}": "prettier --write"
+},
   "browserslist": {
     "production": [
       ">0.2%",
@@ -57,6 +65,9 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.3.0",
+    "prettier": "^3.4.2"
   }
 }
