--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,30 @@
 services:
   webfrontend:
-   image: nginx:alpine  # Use the lightweight Alpine NGINX image
-   container_name: nginx-proxy
-   ports: 
-      - "8080:8080"
-      - "8081:8081"
-   depends_on:
+    image: nginx:alpine  # Use the lightweight Alpine NGINX image
+    container_name: nginx-proxy
+    ports: 
+      - "8082:8082"
+      - "8083:8083"
+    depends_on:
       - webapp
-   volumes:
+    volumes:
       - ./src/client/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./ssl/devcert.crt:/etc/nginx/ssl/devcert.crt
+      - ./ssl/devcert.key:/etc/nginx/ssl/devcert.key
 
   webapp:
-    #Comment image if you want to build locally rather than pulling from registory
-    image: ${DOCKER_REGISTRY-}webapp
     build:
       context: .
       dockerfile: src/WebApp/Dockerfile
+      args:
+        BUILD_CONFIGURATION: ${BUILD_CONFIGURATION:-Release}
+    image: webapp:${BUILD_CONFIGURATION:-release}
+    environment:
+      DOTNET_ENVIRONMENT: ${BUILD_CONFIGURATION:-Release}
+      ASPNETCORE_ENVIRONMENT: ${ASPNETCORE_ENVIRONMENT}
     ports:
-     - "8080:8080"
-     - "8081:8081"
+      - "8080:8080"
+      - "8081:8081"
 
   db:
     image: postgres:15
@@ -36,7 +42,7 @@ services:
     image: redis:latest
     restart: always
     ports:
-        -   "6379:6379"
+      - "6379:6379"
 
 volumes:
-  postgres_data: 
+  postgres_data:
