--- a/src/client/nginx.conf
+++ b/src/client/nginx.conf
@@ -1,9 +1,12 @@
 server {
-    listen 8080;
-    listen 8081;
+    listen 8083 ssl;  # HTTPS
+    server_name localhost;
+
+    ssl_certificate /etc/nginx/ssl/devcert.crt;
+    ssl_certificate_key /etc/nginx/ssl/devcert.key;
 
     location / {
-        proxy_pass http://webapp:8080;  # Redirect requests to the webapp service
+        proxy_pass http://webapp:8080;  # Redirect requests to webapp service
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection keep-alive;
@@ -14,3 +17,11 @@ server {
     }
 }
 
+server {
+    listen 8082;  # HTTP
+    server_name localhost;
+
+    location / {
+        proxy_pass http://webapp:8080;
+    }
+}
