--- a/src/DataMigration/DataMigration.csproj
+++ b/src/DataMigration/DataMigration.csproj
@@ -7,6 +7,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+
+  <ItemGroup>
+    <EmbeddedResource Include="SqlScripts\0001-CreateChatHistoryTable.sql" />
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="dbup" Version="5.0.41" />
     <PackageReference Include="dbup-postgresql" Version="5.0.40" />
