--- a/src/WebApp/Dockerfile
+++ b/src/WebApp/Dockerfile
@@ -2,13 +2,12 @@
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
 EXPOSE 8080
-EXPOSE 8081
+#EXPOSE 8081
 
 # Build stage
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
-WORKDIR /src
-COPY ["WebApp/WebApp.csproj", "WebApp/"]
+COPY ["src/WebApp/WebApp.csproj", "WebApp/"] 
 RUN dotnet restore "./WebApp/WebApp.csproj"
 COPY . .
 WORKDIR "/src/WebApp"
