--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,22 @@
 services:
   webfrontend:
-    image: nginx:alpine  # Use the lightweight Alpine NGINX image
+    build: 
+      context: ./src/client/nginx  # Directory containing Dockerfile
+      dockerfile: Dockerfile
     container_name: nginx-proxy
     ports: 
-      - "8082:8082"
-      - "8083:8083"
+      - "8082:8082"  # HTTP
+      - "8083:8083"  # HTTPS
     depends_on:
       - webapp
     volumes:
-      - ./src/client/nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./ssl/devcert.crt:/etc/nginx/ssl/devcert.crt
-      - ./ssl/devcert.key:/etc/nginx/ssl/devcert.key
+      - ./ssl/devcert.crt:/etc/nginx/ssl/devcert.crt:ro
+      - ./ssl/devcert.key:/etc/nginx/ssl/devcert.key:ro
+    restart: unless-stopped  
 
   webapp:
     build:
       context: .
-      #RUN ls -la /src # For debugging
       dockerfile: src/WebApp/Dockerfile      
       args:
         BUILD_CONFIGURATION: ${BUILD_CONFIGURATION:-Release}
@@ -24,8 +25,7 @@ services:
       ASPNETCORE_ENVIRONMENT: ${ASPNETCORE_ENVIRONMENT}
       ASPNETCORE_URLS: http://+:8080
     ports:
-      - "8080:8080"
-      #- "8081:8081"
+      - "8080:8080" # Http only. Https Requests redirected from reverse proxy      
 
   db:
     image: postgres:15
